force-app/main/default/objects/RSC_Complaint_Category__c/RSC_Complaint_Category__c.object-meta.xml
<CustomObject>
    <label>RSC Complaint Category</label>
    <nameField>
        <displayFormat>RSC-C-C-{0000}</displayFormat>
        <label>RSC Complaint Category Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RSC Complaint Categorys</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>