force-app/main/default/objects/RSC_Complaint_Category__c/fields/Category_Details__c.field-meta.xml
<CustomField>
    <fullName>Category_Details__c</fullName>
    <label>Category Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>