force-app/main/default/objects/RSC_Complaint_Category__c/fields/Category_Label__c.field-meta.xml
<CustomField>
    <fullName>Category_Label__c</fullName>
    <label>Category Label</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>